Fix Datasources tab not showing charts (and being cropped)

--- a/console/src/main/scripts/plugins/metrics/less/metrics.less
+++ b/console/src/main/scripts/plugins/metrics/less/metrics.less
@@ -1963,7 +1963,7 @@ section {
 
 .hk-collapsible-area {
   display: block!important;
-  max-height: 1120px;
+  max-height: 1320px;
   overflow: hidden;
   -webkit-transition: max-height 0.3s ease;
 	-moz-transition: max-height 0.3s ease;
